Z-index & variant search issue fixed

--- a/inc/customizer/custom-controls/typography/typography.css
+++ b/inc/customizer/custom-controls/typography/typography.css
@@ -1,5 +1,4 @@
 .select2-container {
-  z-index: 999999;
   width: 100% !important;
 }
 span.select2-container.select2-container--default.select2-container--open li.select2-results__option {
